Fix padding on smallscreen

--- a/public/stylesheets/main-content.less
+++ b/public/stylesheets/main-content.less
@@ -40,8 +40,6 @@
   }
 
   .site-root & {
-    @media (min-width: @grid-float-breakpoint) {
-      padding-top: @grid-gutter-width / 2;
-    }
+    padding-top: @grid-gutter-width / 2;
   }
 }
